# nu_plugin_audio_hook

./: Cargo.toml  README.md  build.nu  nupm.nuon  package.nuon
.github/workflows/: dependency-update.yaml  publish.yaml
src/: audio_meta.rs  audio_player.rs  constants.rs  lib.rs  main.rs  sound.rs  sound_make.rs
