[package]
name = "nu_plugin_audio_hook"
license = "MIT"
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
keywords = ["nushell", "network", "plugin"]
homepage = "https://github.com/FMotalleb/nu_plugin_audio_hook"
repository = "https://github.com/FMotalleb/nu_plugin_audio_hook"
description = "A nushell plugin to make and play sounds"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
rodio = { version = "0.17.3" }
mp3-duration = { version = "0.1.10" }
id3 = { version = "1.9.0" }
chrono = { version = "*" }
nu-plugin = "0.86.0"
nu-protocol = { version = "0.86.0", features = ["plugin"] }

[features]
default = ["flac", "vorbis", "wav", "symphonia-mp3"]
all-decoders = ["default", "symphonia-all"]

flac = ["rodio/flac"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]
minimp3 = ["rodio/minimp3"]
symphonia-aac = ["rodio/symphonia-aac"]
symphonia-all = ["rodio/symphonia-all"]
symphonia-flac = ["rodio/symphonia-flac"]
symphonia-isomp4 = ["rodio/symphonia-isomp4"]
symphonia-mp3 = ["rodio/symphonia-mp3"]
symphonia-vorbis = ["rodio/symphonia-vorbis"]
symphonia-wav = ["rodio/symphonia-wav"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
