[dependencies]
nu-plugin = "0.96"
chrono = "0.4.38"

[dependencies.id3]
version = "1.13.1"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.mp3-duration]
version = "0.1.10"

[dependencies.nu-protocol]
features = ["plugin"]
version = "0.96"

[dependencies.rodio]
version = "0.18.1"

[features]
all-decoders = ["default", "symphonia-all"]
default = ["flac", "vorbis", "wav", "symphonia-mp3"]
flac = ["rodio/flac"]
minimp3 = ["rodio/minimp3"]
symphonia-aac = ["rodio/symphonia-aac"]
symphonia-all = ["rodio/symphonia-all"]
symphonia-flac = ["rodio/symphonia-flac"]
symphonia-isomp4 = ["rodio/symphonia-isomp4"]
symphonia-mp3 = ["rodio/symphonia-mp3"]
symphonia-vorbis = ["rodio/symphonia-vorbis"]
symphonia-wav = ["rodio/symphonia-wav"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]

[package]
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
description = "A nushell plugin to make and play sounds"
edition = "2021"
homepage = "https://github.com/FMotalleb/nu_plugin_audio_hook"
keywords = ["nushell", "audio", "mp3", "player", "plugin"]
license = "MIT"
name = "nu_plugin_audio_hook"
readme = "README.md"
repository = "https://github.com/FMotalleb/nu_plugin_audio_hook"
version = "0.2.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
